# orochi

./: .deepsource.toml  .editorconfig  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE  README.md  README.rst  SECURITY.md  clamd.conf  docker-compose-swarm.yml  docker-compose.yml  freshclam.conf  gulpfile.js  local.yml  manage.py  package.json  production.yml  pyproject.toml  pytest.ini  setup.cfg
.envs/.local/: .dask  .django  .postgres
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  multiarch.yml  push-dev.yml  push.yml  push_dev.yml
compose/local/: __init__.py
compose/local/arm64/: arm.py  linux.py  pdbscan.py  windows.py
compose/local/clamav/: freshclam.conf
compose/local/dask/: Dockerfile  daskworkerinit.py  prepare.sh
compose/local/django/: Dockerfile  start
compose/local/maxmind/: README.txt
compose/local/nginx/: Dockerfile  default.conf
compose/local/nginx/conf/: default.conf
compose/local/node/: Dockerfile
compose/local/postgres/: Dockerfile
compose/local/vol_fix/: __init__constants.py  arm.py
compose/production/dask/: Dockerfile
compose/production/django/: Dockerfile  entrypoint
compose/production/postgres/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yml
config/: api_router.py  asgi.py  routing.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: API-Guide.md  Admin-Guide.md  Deploy-to-Swarm-Guide.md  Users-Guide.md  conf.py  index.rst
examples/: custom_rule.ipynb  dump.ipynb  example1.yara  example2.yara  local_api.ipynb  rule.ipynb
orochi/: __init__.py  conftest.py
orochi/api/: api.py  filters.py  models.py  permissions.py
orochi/api/routers/: admin.py  auth.py  bookmarks.py  customrules.py  dumps.py  folders.py  plugins.py  rules.py  symbols.py  users.py  utils.py
orochi/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
orochi/daskmanager/: admin.py  apps.py  daskmanager.py  models.py  serializers.py  views.py
orochi/daskmanager/migrations/: 0001_initial.py
orochi/static/: README.txt
orochi/static/css/: admin_dropdown.css  diff_style.css  jsoneditor.css  project.css  project.min.css  style.css  toast.min.css
orochi/static/js/: jsoneditor.min.js  jstreetable.js  toast.min.js
orochi/static/website/: login.css  style.css
orochi/templates/: 400.html  403.html  404.html  500.html  base.html  messages.html
orochi/templates/account/: base.html  login.html  password_reset.html  signup.html
orochi/templates/admin/: base.html  dump_intermediate.html
orochi/templates/handlebars/: dump.handlebars  dump_folder.handlebars  maxmind.handlebars  plugins.handlebars  vt.handlebars
orochi/templates/rest_framework/: api.html
orochi/templates/users/: user_bookmarks.html  user_detail.html  user_plugins.html  user_rules.html
orochi/templates/website/: diff_view.html  file_download.html  hex_view.html  index.html  json_view.html  list_symbols.html  notify.html  partial_analysis.html  partial_bookmark_create.html  partial_bookmark_edit.html  partial_create.html  partial_edit.html  partial_export.html  partial_folder.html  partial_index_create.html  partial_index_edit.html  partial_index_info.html  partial_indices.html  partial_info.html  partial_isf_download.html  partial_json.html  partial_note.html  partial_packages_upload.html  partial_params.html  partial_plugins.html  partial_pstree.html  partial_symbols.html  partial_symbols_banner.html  partial_symbols_upload.html  partial_tree.html  partial_vt.html  small_file_download.html  small_regipy.html  small_vt_report.html
orochi/templates/ya/: partial_edit_rule.html  partial_rule_edit.html  partial_rule_upload.html  partial_upload_rules.html
orochi/users/: admin.py  apps.py  models.py  urls.py  views.py
orochi/users/api/: serializers.py  views.py
orochi/users/migrations/: 0002_alter_user_first_name.py  0003_user_services.py  0004_remove_user_services.py
orochi/users/tests/: factories.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
orochi/utils/: download_symbols.py  elk_migrate.py  elk_migrate.todo  plugin_install.py  timeliner.py  volatility_dask_elk.py
orochi/website/: admin.py  apps.py  consumers.py  defaults.py  forms.py  middleware.py  models.py  routing.py  signals.py  urls.py  views.py
orochi/website/api/: permissions.py  serializers.py  views.py
orochi/website/migrations/: 0001_initial.py  0002_analysis_operating_system.py  0002_auto_20200604_0915.py  0002_auto_20200611_0742.py  0002_plugin_local_dump.py  0003_alter_result_result.py  0003_extracteddump.py  0003_plugin_operating_system.py  0004_auto_20200604_0921.py  0004_auto_20200730_1507.py  0005_auto_20200730_1532.py  0005_plugin_disabled.py  0006_auto_20200604_1340.py  0006_result_parameter.py  0007_alter_result_parameter.py  0008_alter_result_parameter.py  0009_auto_20200804_1422.py  0010_auto_20200804_1433.py  0011_auto_20200805_1007.py  0012_service.py  0013_auto_20200805_1327.py  0014_auto_20200805_1341.py  0015_auto_20200805_1513.py  0016_service_proxy.py  0017_auto_20200826_1511.py  0018_plugin_disabled.py  0019_auto_20200827_0840.py  0020_extracteddump_reg_array.py  0021_auto_20200903_1141.py  0022_result_updated_at.py  0023_auto_20200930_1427.py  0024_auto_20200930_1428.py  0025_dump_banner.py  0026_dump_missing_symbols.py  0027_dump_suggested_symbols_path.py  0028_auto_20210122_0918.py  0029_bookmark.py  0030_auto_20210211_1657.py  0031_auto_20210212_1319.py  0032_auto_20210215_1553.py  (+42 more)
orochi/website/templatetags/: custom_tags.py
orochi/ya/: admin.py  apps.py  forms.py  models.py  schema.py  urls.py  views.py
orochi/ya/migrations/: 0001_initial.py  0002_auto_20210314_1621.py  0003_remove_rule_namespace.py  0004_rule_compiled.py  0005_auto_20210618_0947.py  0006_rule_rule.py  0007_rule_search_vector.py  0008_rule_error.py
requirements/: base.txt  local.txt  production.txt
symbols/: .gitignore  MD5SUMS
(+55 files in other folders)
