[project]
name = "orochi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "argon2-cffi==23.1.0",
    "beautifulsoup4==4.13.3",
    "bokeh>=3.7.2",
    "capstone==5.0.6",
    "channels-redis==4.2.1",
    "channels[daphne]==4.2.2",
    "clamdpy==0.1.0.post1",
    "cloudpickle==3.1.1",
    "crispy-bootstrap5==2024.10",
    "daphne==4.1.2",
    "dask==2025.3.0",
    "distributed==2025.4.1",
    "django==5.1.7",
    "django-admin-list-filter-dropdown==1.0.3",
    "django-admin-multiple-choice-list-filter==0.1.1",
    "django-allauth[mfa]==65.6.0",
    "django-auth-ldap==5.1.0",
    "django-colorfield==0.12.0",
    "django-cors-headers==4.7.0",
    "django-crispy-forms==2.3",
    "django-environ==0.12.0",
    "django-extra-settings==0.13.0",
    "django-file-form==3.8.2",
    "django-guardian==2.4.0",
    "django-import-export==4.3.7",
    "django-json-widget==2.0.1",
    "django-ninja==1.4.0",
    "django-redis==5.4.0",
    "django-widget-tweaks==1.5.0",
    "geoip2==5.0.1",
    "gitpython==3.1.44",
    "gunicorn==23.0.0",
    "hiredis==3.1.0",
    "httpx>=0.28.1",
    "jsonschema==4.23.0",
    "jupyter-server-proxy>=4.4.0",
    "lz4==4.4.3",
    "marko==2.1.2",
    "msgpack==1.1.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "pefile==2024.8.26",
    "pillow==11.1.0",
    "plotly==6.0.1",
    "psycopg2-binary==2.9.10",
    "pyarrow>=19.0.1",
    "pycryptodome==3.22.0",
    "pymisp==2.5.9",
    "python-debian==1.0.1",
    "python-ldap==3.4.4",
    "python-magic==0.4.27",
    "pytz==2025.2",
    "redis==5.2.1",
    "regipy[full]==5.1.0",
    "rpmfile==2.1.0",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "volatility3",
    "vt-py==0.20.0",
    "whitenoise==6.9.0",
    "yara-x==0.14.0",
]

[tool.uv.sources]
volatility3 = { git = "https://github.com/volatilityfoundation/volatility3.git", rev = "f74082ec365a9c6ae8618dc99fad37bf28328905" }

[dependency-groups]
dev = [
    "black==25.1.0",
    "coverage==7.8.0",
    "django-coverage-plugin==3.1.0",
    "django-debug-toolbar==5.1.0",
    "django-extensions==3.2.3",
    "django-stubs==5.1.3",
    "factory-boy==3.3.3",
    "flake8==7.2.0",
    "flake8-isort==6.1.2",
    "mypy==1.15.0",
    "pre-commit==4.2.0",
    "pylint-django==2.6.1",
    "pytest==8.3.5",
    "pytest-django==4.10.0",
    "pytest-sugar==1.0.0",
]
